--- a/templates/login.html
+++ b/templates/login.html
@@ -70,6 +70,9 @@
             <input type="password" name="password" placeholder="비밀번호" required><br>
             <button type="submit">로그인</button>
         </form>
+        <div style="margin-top:15px;">
+            <a href="/register">회원가입</a>
+        </div>
     </div>
 </body>
 </html>
